# kavik.cz

./: .gitignore  .travis.yml  CLAUDE.md  README.md  astro.config.mjs  config.toml  index.html  package-lock.json  package.json  prompter.json
.github/workflows/: main_le.yml
branding/: kavik_logo.afdesign  kavik_logo_twitter.afdesign
configs/: postcss.config.js  tailwind.config.js  webpack.config.js  webpack.css_classes.config.js
content/pages/: about.md
crate/: Cargo.toml  Makefile.toml  rustfmt.toml
crate/src/: app.rs  lib.rs  page.rs  route.rs  rust_apis.rs
crate/src/page/: about.rs  blank.rs  home.rs  mod.rs  not_found.rs
crate/src/page/partial/: footer.rs  header.rs
css/: custom.css  fonts.css  styles.css
design/: web.afdesign
design/web/: martin_kavik.afdesign  web.afdesign
entries/: index.hbs  index.html  index.ts
entries/templates/: favicons.hbs  head_scripts.hbs  loading_page.hbs  metas.hbs  social_media.hbs
favicons/: html_code.html
public/: 404.html  atom.xml  index.html  main.css  robots.txt  sitemap.xml
public/about/: index.html
public/archive/: index.html
public/projects/: data.toml  index.html
public/tags/: index.html
scripts/: postcss_rust_helpers.js
src/: content.config.ts
src/components/: CallToAction.astro  ContactCTA.astro  EcosystemDiagram.astro  Footer.astro  Gallery.astro  Grid.astro  Hero.astro  (+12 more)
tools/: Cargo.toml
tools/extension/: background.js  manifest.json  popup.html  popup.js
tools/src/: main.rs
tools/src/commands/: browser.rs
tools/src/mcp/: mod.rs
tools/src/ws_server/: mod.rs  protocol.rs
(+61 files in other folders)
