[package]
version = "0.1.0"
name = "kavik_cz"
repository = "https://github.com/MartinKavik/kavik.cz"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Personal website kavik.cz"
categories = ["wasm", "rust", "tailwindcss", "seed", "personal", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.4.1"
cfg-if = "^0.1.10"
wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
fixed-vec-deque = "0.1.8"

[dependencies.web-sys]
version = "^0.3.27"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CustomEvent",
  "DomTokenList",
  "ScrollBehavior",
  "ScrollToOptions",
  "Navigator",
]

[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`

[profile.release]
lto = true
opt-level = 's'
